--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,13 @@
     <title>CSV Filter</title>
     <!-- TO DO: Custom stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <!-- import './index.css'; -->
 <body>
     <div class="container">
-
-        <h1>Upload Goodreads CSV File and Apply Filters</h1>
+        <h1 style="margin-bottom:40px">GoodreadsFilter </h1>
+        <h2>Upload Goodreads CSV File and Apply Filters</h2>
 
         <form action="/" method="POST" enctype="multipart/form-data">
 
@@ -42,8 +42,8 @@
                 </div>
             </div>  
 
-            <button type="button" id="add-filter" class="btn btn-secondary">Add Another Filter</button>
-            <button type="submit" class="btn btn-primary">Apply Filters</button>
+            <button type="button" id="add-filter" class="btn btn-secondary add-filters-btn">Add Another Filter</button>
+            <button type="submit" class="btn btn-primary apply-filters-btn">Apply Filters</button>
 
         </form>
 
@@ -101,6 +101,19 @@
             });
         
         </script>
+
+        <div class="container">
+            <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="#/" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQ</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact</a></li>
+            </ul>
+            <p class="text-center text-body-secondary">&copy; 2024 Dion Humphrey</p>
+            </footer>
+        </div>
+
+        <!--Footer with faq, github link, contact page-->
             
     </div>
 </body>
