--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <h1 style="margin-bottom:40px">GoodreadsFilter </h1>
-        <h2>Upload Goodreads CSV File and Apply Filters</h2>
+        <h2>Upload a Goodreads CSV File and Apply the Filters</h2>
 
         <form action="/" method="POST" enctype="multipart/form-data">
 
@@ -105,9 +105,9 @@
         <div class="container">
             <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="#/" class="nav-link px-2 text-body-secondary">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQ</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact</a></li>
+                <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="{{ url_for('faq') }}" class="nav-link px-2 text-body-secondary">FAQ</a></li>
+                <li class="nav-item"><a href="{{ url_for('faq') }}#contact" class="nav-link px-2 text-body-secondary">Contact</a></li>
             </ul>
             <p class="text-center text-body-secondary">&copy; 2024 Dion Humphrey</p>
             </footer>
