Added formatting notes to files - added formatting notes to templates/index.html - added formatiing notes to old/goodreads_filter.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,11 +46,11 @@
                         <option value="Number of Pages">Number of Pages</option>
                         <option value="Year Published">Year Published</option>
                         <option value="Original Publication Year">Original Publication Year</option>
-                        <option value="Date Read">Date Read</option> <!--Figure out Formatting-->
-                        <option value="Date Added">Date Added</option> <!--Figure out Formatting-->
-                        <option value="Bookshelves">Bookshelves</option> <!--Figure out Formatting-->
-                        <option value="Bookshelves with Positions">Bookshelves with Positions</option> <!--Figure out Formatting-->
-                        <option value="Exclusive Shelf">Exclusive Shelf</option> <!--Figure out Formatting-->
+                        <option value="Date Read">Date Read (YYYY/MM/DD)</option> <!--WORKS (INCLUDE Leading zero)-->
+                        <option value="Date Added">Date Added (YYYY/MM/DD)</option> <!--WORKS (INCLUDE Leading zeros) -->
+                        <option value="Bookshelves">Bookshelves</option> <!--WORKS-->
+                        <option value="Bookshelves with positions">Bookshelves with positions</option> <!--Figure out Formatting-->
+                        <option value="Exclusive Shelf">Exclusive Shelf</option> <!--Figure out Formatting (Doesnt work, returns EVERYTHING w/ "read" instead of specifically just "read")-->
                         <option value="My Review">My Review</option>
                         <option value="Spoiler">Spoiler</option>
                         <option value="Private Notes">Private Notes</option>
