--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSV Filter</title>
-    <!-- TO DO: Custom stylesheet -->
+    <title>GoodreadsFilter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
-<!-- import './index.css'; -->
+
 <body>
     <div class="container">
         <h1 style="margin-bottom:40px">GoodreadsFilter </h1>
@@ -19,14 +18,18 @@
 
         <form action="/" method="POST" enctype="multipart/form-data">
 
+            {% if uploaded_file_name %}
+                <p>Currently uploaded file: {{ uploaded_file_name }}</p>
+            {% endif %}
+
             <div class="form-group">
-                <label for="file">Upload CSV File:</label>
-                <input type="file" class="form-control" id="file" name="file">
+                    <label for="file">Upload CSV File:</label>
+                    <input type="file" class="form-control" id="file" name="file">
             </div>
 
             <div id="filters-container">
                 <div class="form-group">
-                    <label for="filter_type">Filter Type:</label>
+                    <label for="filter_type">Select Filter Type:</label>
                     <!--Make sure the names for filter_type[ ] and sub_filter[ ] match the python-->
                     <select class="form-control" id="filter_type" name="filter_type[]">
                         <!--TO DO: Generate filter types in dropdown based on column names in dataframe-->
@@ -84,7 +87,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="sub_filter">Filter Constraint:</label>
+                    <label for="sub_filter">Enter Filter Constraint:</label>
                     <input type="text" class="form-control" id="sub_filter" name="sub_filter[]" placeholder="Enter filter constraint">
                 </div>
             </div>  
@@ -112,8 +115,7 @@
                 // Create a new <div> to hold the new filter fields
                 const newFilterGroup = document.createElement('div');
 
-                // Add Bootstrap's "form-group" class
-                // and "filter-group" class for potential custom styling
+                // Added Bootstrap's "form-group" class and "filter-group" class for custom styling
                 newFilterGroup.classList.add('form-group', 'filter-group');
 
                 // Set the inner HTML of the new div with filter type and constraint fields
@@ -166,6 +168,7 @@
         
         </script>
 
+        <!--Maybe add Github link-->
         <div class="container">
             <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -177,19 +180,6 @@
             </footer>
         </div>
 
-        <!-- <script>
-            function changeDivColor(color) {
-                document.getElementById("contact").style.backgroundColor = color;
-            }
-            document.getElementById("{{ url_for('faq') }}#contact").onClick = function() { //when the anchor is clicked
-                changeDivColor("red"); //chang the div color to red
-                setTimeout(function() { //wait 1000 milliseconds (1s) -- see below
-                    changeDivColor("white"); //then change it back to white
-                }, 1000);
-            };
-        </script> -->
-
-        <!--Footer with faq, github link, contact page-->
             
     </div>
 </body>
